--- a/src/components/Expenses/ExpenseItem.module.css
+++ b/src/components/Expenses/ExpenseItem.module.css
@@ -4,7 +4,8 @@
     align-items: center;
     padding: 0.5rem;
     margin: 1rem 0;
-    background: linear-gradient(180deg, #1f584b, #17493d);
+    border-radius: 12px;
+    background: #52796F;
 }
 
 .expense-item__description {
@@ -29,8 +30,6 @@
     font-size: 1rem;
     font-weight: bold;
     color: white;
-    background-color: #40005d;
-    border: 1px solid white;
     padding: 0.5rem;
     border-radius: 12px;
 }
@@ -51,4 +50,12 @@
         font-size: 1.25rem;
         padding: 0.5rem 1.5rem;
     }
+}
+
+.edit-btn {
+    background-color: darkorange !important;
+}
+
+.delete-btn {
+    background-color: #780000 !important;
 }
