--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -1,6 +1,6 @@
 .expenses {
     padding: 1rem;
-    background: linear-gradient(180deg, #307e6c, #2b996d);
+    background: #354F52;
     margin: 2rem auto;
     width: 50rem;
     max-width: 95%;
