--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -6,5 +6,5 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-    background: radial-gradient(#303b37, #1a1f1d);
+    background: #CAD2C5;
 }
