--- a/src/components/NewExpense/NewExpense.module.css
+++ b/src/components/NewExpense/NewExpense.module.css
@@ -1,3 +1,9 @@
+.header-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
 .new-expense {
     background-color: #a892ee;
     padding: 1rem;
