--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,38 +1,9 @@
 .header {
-    background: #CAD2C5;
-    padding: 1rem;
+    padding: 5px 20% 10px;
 }
 
 .btn {
     background-color: #2F3E46 !important;
-}
-
-.new-expense button {
-    font: inherit;
-    cursor: pointer;
-    padding: 1rem 2rem;
-    border: 1px solid #40005d;
-    background-color: #40005d;
-    color: white;
-    border-radius: 12px;
-    margin-right: 1rem;
-}
-
-.new-expense button:hover,
-.new-expense button:active {
-    background-color: #510674;
-    border-color: #510674;
-}
-
-.new-expense button.alternative {
-    color: #220131;
-    border-color: transparent;
-    background-color: transparent;
-}
-
-.new-expense button.alternative:hover,
-.new-expense button.alternative:active {
-    background-color: #ddb3f8;
 }
 
 .btn-logout {
