--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 html {
-    font-family: 'Noto Sans JP', sans-serif;
 }
 
 body {
     margin: 0;
     background-color: #CAD2C5;
+    font-family: "Avantgarde", "TeX Gyre Adventor", "URW Gothic L", sans-serif
 }
