--- a/src/components/Expenses/ExpensesBlock.module.css
+++ b/src/components/Expenses/ExpensesBlock.module.css
@@ -1,6 +1,6 @@
 .expenses {
     padding: 0 15px;
-    background: #354F52;
+    background-color: #354F52;
     margin: auto;
     width: 60%;
     max-width: 95%;
